API for Airlines' names had been implemented. Still a bug with Intent when click on ListView Item for Detail's Activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".SearchAirportActivity" />
         <activity android:name=".SearchFlights" />
+        <activity android:name=".ListViewItemDetail"></activity>
     </application>
 
 </manifest>
